--- a/index.html
+++ b/index.html
@@ -21,36 +21,21 @@
     let newWord; //현재 단어
 
     const onClickButton = () => {
-      if (!word) { //제시어가 비어 있는가?
+      if (!word || word[word.length-1] === newWord[0]) { //제시어가 비어 있는가? 또는 입력한 단어가 올바른가?
         word = newWord; //입력한 단어가 제시어가 된다.
         $word.textContent = word; //화면에 제시어 표시
-        const order = Number($order.textContent);
+        
+        const order = Number($order.textContent); //다음번호넘김
         if(order+1 > number) {
           $order.textContent = 1;
         } else {
           $order.textContent = order + 1;
         }
-        $input.value = '';
-        $input.focus();
-      } else { //비어있지않다.
-        if (word[word.length-1] === newWord[0]) { //입력한 단어가 올바른가?
-          //올바르다.
-          word = newWord; //현재 단어를 제시어에 저장한다
-          $word.textContent = word; //화면에 제시어 표시
-          const order = Number($order.textContent);
-          if(order+1 > number) {
-            $order.textContent = 1;
-          } else {
-            $order.textContent = order + 1;
-          }
-          $input.value = '';
-          $input.focus();
-        } else { //올바르지 않다.
-          alert('올바르지 않은 단어입니다');
-          $input.value = '';
-          $input.focus();
-        }
+      } else { //올바르지 않다.
+        alert('올바르지 않은 단어입니다');
       }
+      $input.value = '';//입령창 비우고 커서 둠
+      $input.focus();
     }
     const onInput = (event) => {
       newWord = event.target.value; //입력하는 단어를 현재 단어로
