--- a/index.html
+++ b/index.html
@@ -2,77 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>반응속도 테스트</title>
+  <title>10장_틱택토</title>
   <style>
-    #screen {
-      width: 300px;
-      height: 200px;
+    table {
+      border-collapse: collapse;
+    }
+    td {
+      border: 1px solid black;
+      width: 40px;
+      height: 40px;
       text-align: center;
-      user-select: none;
-    }
-    #screen.waiting {
-      background-color: aqua;
-    }
-    #screen.ready {
-      background-color: red;
-      color: white;
-    }
-    #screen.now {
-      background-color: greenyellow;
     }
   </style>
 </head>
 <body>
-  <div id="screen" class="waiting">클릭해서 시작하세요</div>
-  <div id="result"></div>
+  <!-- <table>
+    <tr>
+      <dt></dt>
+      <dt></dt>
+      <dt></dt>
+    </tr>
+    <tr>
+      <dt></dt>
+      <dt></dt>
+      <dt></dt>
+    </tr>
+    <tr>
+      <dt></dt>
+      <dt></dt>
+      <dt></dt>
+    </tr>
+  </table> -->
+<script>
+  const data = [];
+  const {body} = document;
 
-  <script>
-    const $screen = document.querySelector('#screen');
-    const $result = document.querySelector('#result');
-    let startTime;
-    let endTime;
-    const records = [];
-    let timeoutId; //setTimeout 변수 담기용
+  for (let i = 0; i < 3; i++) {
+    data.push([]);
+  }
+  
+  const $table = document.createElement('table');
 
-    //해당 클래스 있는지 T/F로 알수 있음
-    $screen.addEventListener('click', function() {
-      if ($screen.classList.contains('waiting')) {//대기화면
-        $screen.classList.remove('waiting');
-        $screen.classList.add('ready');
-        $screen.textContent = '초록색이 되면 클릭하세요.';
+  for (let i = 0; i < 3; i++) {
+    const $tr = document.createElement('tr');
+    for (let i = 0; i< 3; i++) {
+      $tr.append(document.createElement('td'));
+    }
+    $table.append($tr);
+  }
+  document.body.append($table);
 
-        timeoutId = setTimeout(function() {
-          startTime = new Date();
-          $screen.classList.remove('ready');
-          $screen.classList.add('now');
-          $screen.textContent = '클릭하세요!';
-        }, Math.floor((Math.random() * 1000) + 2000)); //2000~3000 사이 수
-      } else if ($screen.classList.contains('ready')) { //준비 화면
-        clearTimeout(timeoutId);
-        $screen.classList.remove('ready');
-        $screen.classList.add('waiting');
-        $screen.textContent = '너무 성급하시군요!';
-      } else if ($screen.classList.contains('now')) { // 클릭 화면
-        endTime = new Date();
-        const current = endTime - startTime;
-        records.push(current);
-        const average = records.reduce((a, c) => a + c) /records.length;
-        $result.textContent = `현재: ${current}ms, 평균:${average}ms`;
-
-        const topFive = records.sort((a, b) => a - b).slice(0, 5);
-        topFive.forEach((v, i) => {
-          $result.append(document.createElement('br'),`${i+1}등: ${v}ms`); 
-        });
-        //오류방지를 위한 값 초기화
-        startTime = null;
-        endTime = null;
-        $screen.classList.remove('now');
-        $screen.classList.add('waiting');
-        $screen.textContent = '클릭해서 시작하세요';
-      }
-    })
-  </script>
+</script>
 </body>
 </html>
