--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </tr>
   </table> -->
 <script>
+  let turn = 'O';
   const data = [];
   const {body} = document;
 
@@ -47,7 +48,20 @@
   for (let i = 0; i < 3; i++) {
     const $tr = document.createElement('tr');
     for (let i = 0; i< 3; i++) {
-      $tr.append(document.createElement('td'));
+      const $td = document.createElement('td');
+      $td.addEventListener('click', (event) => {
+        //칸에 글자가 있나?
+        if (event.target.textContent) return; //있으면 멈춤
+
+        event.target.textContent = turn;
+        //승부 확인
+        if (turn === 'O') {
+          turn = 'X';
+        } else if (turn === 'X') {
+          turn = 'O';
+        }
+      });
+      $tr.append($td);
     }
     $table.append($tr);
   }
