--- a/index.html
+++ b/index.html
@@ -41,12 +41,90 @@
   const rows = [];
   let turn = 'O';
 
+  const checkWinner = (target) => {
+    // let rowIndex;
+    // let cellIndex;
+    // rows.forEach((row, ri) => {
+    //   row.forEach((cell, ci) => {
+    //     if (cell === target) {
+    //       rowIndex = ri;
+    //       cellIndex = ci;
+    //     }
+    //   });
+    // }); //아래 축약
+    const rowIndex = target.parentNode.rowIndex;
+    const cellIndex = target.cellIndex;
+
+    // console.log(target.parentNode.children);
+    // console.log(target.parentNode.children.indexOf(target)); //children은 배열이 아니라서 indexOf메서드 사용할 수 없다. Tag.children은 객체이다.그래도 children[0]이나 children.length처럼 사용할 수 있어서 배열로 착각하기 쉬운데, 이런 객체를 유사 배열 객체(array-like object) 라고 한다.
+    console.log(Array.from(target.parentNode.children));
+    console.log(Array.from(target.parentNode.children).indexOf(target));
+
+    // 세 칸 다 채워졌나?
+    let hasWinner = false;
+    // 가로줄 검사
+    if (
+      rows[rowIndex][0].textContent === turn &&
+      rows[rowIndex][1].textContent === turn &&
+      rows[rowIndex][2].textContent === turn
+    ) {
+      hasWinner = true;
+    }
+    // 세로줄 검사
+    if (
+      rows[0][cellIndex].textContent === turn &&
+      rows[1][cellIndex].textContent === turn &&
+      rows[2][cellIndex].textContent === turn
+    ) {
+      hasWinner = true;
+    }
+    // 대각선 검사
+    if (
+      rows[0][0].textContent === turn &&
+      rows[1][1].textContent === turn &&
+      rows[2][2].textContent === turn
+    ) {
+      hasWinner = true;
+    }
+    if (
+      rows[0][2].textContent === turn &&
+      rows[1][1].textContent === turn &&
+      rows[2][0].textContent === turn
+    ) {
+      hasWinner = true;
+    }
+    return hasWinner;
+  };
+
   const callback = (event) => {
     if (event.target.textContent !== '') { // 칸이 이미 채워져 있는가?
       console.log('빈칸이 아님');
+      return;
     } else { // 빈칸이면
       console.log('빈칸임');
       event.target.textContent = turn;
+      const hasWinner = checkWinner(event.target);
+      // 승자가 있으면
+      if (hasWinner) {
+        $result.textContent = `${turn}님의 승리`;
+        $table.removeEventListener('click', callback);
+        return;
+      }
+      // 승자가 없으면
+      // let draw = true;
+      // rows.forEach((row) => {
+      //   row.forEach((cell) => {
+      //     if (!cell.textContent) {
+      //       draw = false;
+      //     }
+      //   });
+      // }); //아래 축약
+      const draw = rows.flat().every((cell) => cell.textContent);
+
+      if (draw) {
+        $result.textContent = `무승부`;
+        return;
+      }
       turn = turn === 'X' ? 'O' : 'X'; //turn 을 O,X번갈아 바꾸기
     }
   };
