--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@
         return;
       }
       turn = turn === 'X' ? 'O' : 'X'; //turn 을 O,X번갈아 바꾸기
+
+      //컴퓨터 차례를 넣음
+      if (turn === 'X') {
+        const emptyCells = rows.flat().filter((v) => !v.textContent);
+        const randomCell = emptyCells[Math.floor(Math.random() * emptyCells.length)];
+        randomCell.textContent = 'X';
+        const hasWinner = checkWinner(randomCell);
+        //승자가 있으면
+        if (hasWinner) {
+          $result.textContent = `${turn}님의 승리!`;
+          return;
+        }
+        //승자가 없으면
+        const draw = rows.flat().every((cell) => cell.textContent);
+        if(draw) {
+          $result.textContent = '무승부';
+          return;
+        }
+        turn = turn === 'X' ? 'O' : 'X';
+      }
     }
   };
 
