--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       hp: 100,
       xp: 0,
       att: 10,
+      attact(monster) {
+        monster.hp -= this.att;
+        this.hp -= monster.att;
+      },
+      heal(monster) {
+        this.hp += 20;
+        this.hp -= monster.att;
+      },
     };
     let monster = null;
     const monsterList = [
@@ -101,6 +109,20 @@
       } else if (input === '3') {
       }
     });
+
+    $battleMenu.addEventListener('submit', (event) => {
+      event.preventDefault();
+      const input = event.target['battle-input'].value;
+      if (input === '1') {
+        hero.attact(monster);
+        monster.attack(hero);
+        $heroHp.textContent = `HP: ${hero.hp}/${hero.maxHp}`;
+        $monsterHp.textContent = `HP: ${monster.hp}/${monster.maxHp}`;
+        $message.textContent = `${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다.`;
+      } else if (input === '2') {
+      } else if (input === '3') {
+      }
+    })
   </script>
 </body>
 </html>
