--- a/index.html
+++ b/index.html
@@ -113,9 +113,25 @@
       onBattleMenuInput = (event) => {
         event.preventDefault();
         const input = event.target['battle-input'].value;
-        if (input === '1') {
-        } else if (input === '2') {
-        } else if (input === '3') {
+        if (input === '1') { // 공격
+          const {hero, monster} = this;
+          hero.attack(monster);
+          monster.attack(hero);
+          if (hero.hp <= 0) {
+            this.showMessage(`${hero.lev} 레벨에서 전사. 새 주인공을 생성하세요.`);
+            this.quit();
+          } else if (monster.hp <= 0) {
+            this.showMessage(`몬스터를 잡아 ${monster.xp} 경험치를 얻었다.`);
+            hero.getXp(monster.xp);
+            this.monster = null;
+            this.changeScreen('game');
+          } else {
+            this.showMessage(`${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다.`);
+          }
+          this.updateHeroStat();
+          this.updateMonsterStat();
+        } else if (input === '2') { // 회복
+        } else if (input === '3') { // 도망
         }
       }
       updateHeroStat() {
@@ -146,25 +162,20 @@
           $monsterHp.textContent = `HP: ${monster.hp}/${monster.maxHp}`;
           $monsterAtt.textContent = `ATT: ${monster.att}`;
       }
+
       showMessage(text) {
         $message.textContent = text;
       }
 
-      onBattleMenuInput = (event) => {
-        event.preventDefault();
-        const input = event.target['battle-input'].value;
-        if (input === '1') { // 공격
-          const {hero, monster} = this;
-          hero.attack(monster);
-          monster.attack(hero);
-          this.showMessage(`${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다.`);
-          this.updateHeroStat();
-          this.updateMonsterStat();
-        } else if (input === '2') { // 회복
-
-        } else if (input === '3') { // 도망
-
-        }
+      quit() {
+        this.hero = null;
+        this.monster = null;
+        this.updateHeroStat();
+        this.updateMonsterStat();
+        $gameMenu.removeEventListener('submit', this.onGameMenuInput);
+        $battleMenu.removeEventListener('submit', this.onBattleMenuInput);
+        this.changeScreen('start');
+        game = null;
       }
     }
     class Hero {
@@ -183,6 +194,17 @@
       heal(monster) {
         this.hp += 20;
         this.hp -= monster.att;
+      }
+      getXp(xp) {
+        this.xp += xp;
+        if (this.xp >= this.lev * 15) { // 경험치를 다 채우면
+          this.xp -= this.lev * 15;
+          this.lev += 1;
+          this.maxHp += 5;
+          this.att += 5;
+          this.hp = this.maxHp;
+          this.game.showMessage(`레벨업! 레벨 ${this.lev}`);
+        }
       }
     }
 
