--- a/index.html
+++ b/index.html
@@ -178,18 +178,79 @@
         game = null;
       }
     }
-    class Hero {
-      constructor(game, name) {
+    // class Hero {
+    //   constructor(game, name) {
+    //     this.game = game;
+    //     this.name = name;
+    //     this.lev = 1;
+    //     this.maxHp = 100;
+    //     this.hp = 100;
+    //     this.xp = 0;
+    //     this.att = 10;
+    //   }
+    //   attack(target) {
+    //     target.hp -= this.att;
+    //   }
+    //   heal(monster) {
+    //     this.hp += 20;
+    //     this.hp -= monster.att;
+    //   }
+    //   getXp(xp) {
+    //     this.xp += xp;
+    //     if (this.xp >= this.lev * 15) { // 경험치를 다 채우면
+    //       this.xp -= this.lev * 15;
+    //       this.lev += 1;
+    //       this.maxHp += 5;
+    //       this.att += 5;
+    //       this.hp = this.maxHp;
+    //       this.game.showMessage(`레벨업! 레벨 ${this.lev}`);
+    //     }
+    //   }
+    // }
+
+    // class Monster {
+    //   constructor(game, name, hp, att, xp) {
+    //     this.game = game;
+    //     this.name = name;
+    //     this.maxHp = hp;
+    //     this.hp = hp;
+    //     this.xp = xp;
+    //     this.att = att;
+    //   }
+    //   attack(target) {
+    //     target.hp -= this.att;
+    //   }
+    // }
+
+    let game = null;
+    $startScreen.addEventListener('submit', (event) => {
+      event.preventDefault();
+      const name = event.target['name-input'].value;
+      game = new Game(name);
+    })
+
+    class Unit {
+      constructor(game, name, hp, att, xp) {
         this.game = game;
         this.name = name;
-        this.lev = 1;
-        this.maxHp = 100;
-        this.hp = 100;
-        this.xp = 0;
-        this.att = 10;
+        this.maxHp = hp;
+        this.hp = hp;
+        this.xp = xp;
+        this.att = att;
       }
       attack(target) {
         target.hp -= this.att;
+      }
+    }
+
+    class Hero extends Unit {
+      constructor(game, name) {
+        super(game, name, 100, 10, 0); // 부모 클래스의 생성자 호출
+        this.lev = 1; // 그 외 속성
+      }
+      attack(target) {
+        super.attack(target); //부모 클래스의 attack
+        //부모 클래스 attack 외의 동작
       }
       heal(monster) {
         this.hp += 20;
@@ -208,26 +269,11 @@
       }
     }
 
-    class Monster {
+    class Monster extends Unit {
       constructor(game, name, hp, att, xp) {
-        this.game = game;
-        this.name = name;
-        this.maxHp = hp;
-        this.hp = hp;
-        this.xp = xp;
-        this.att = att;
-      }
-      attack(target) {
-        target.hp -= this.att;
+        super(game, name, hp, att, xp);
       }
     }
-    let game = null;
-    $startScreen.addEventListener('submit', (event) => {
-      event.preventDefault();
-      const name = event.target['name-input'].value;
-      game = new Game(name);
-    })
-
   </script>
 </body>
 </html>
