--- a/index.html
+++ b/index.html
@@ -44,6 +44,43 @@
   <div id="wrapper"></div>
   <script>
     const $wrapper = document.querySelector('#wrapper');
+
+    const total = 12;
+    const colors = ['red', 'orange', 'yellow', 'green', 'white', 'pink'];
+    let colorCopy = colors.concat(colors);
+    let shuffled = [];
+
+    function shuffle() {
+      for (let i = 0; colorCopy.length > 0; i++) {
+        const randomIndex = Math.floor(Math.random() * colorCopy.length);
+        shuffled = shuffled.concat(colorCopy.splice(randomIndex, 1));
+      }
+    }
+
+    function createCard(i) {
+      const card = document.createElement('div');
+      card.className = 'card'; //.card 태그 생성
+      const cardInner = document.createElement('div');
+      cardInner.className = 'card-inner'; //.card-inner 태그 생성
+      const cardFront = document.createElement('div');
+      cardFront.className = 'card-front'; //.card-front 태그 생성
+      const cardBack = document.createElement('div');
+      cardBack.className = 'card-back'; //.card-back 태그 생성
+      cardBack.style.backgroundColor = shuffled[i];
+      cardInner.appendChild(cardFront);
+      cardInner.appendChild(cardBack);
+      card.appendChild(cardInner);
+      return card;
+    }
+
+    function startGame() {
+      shuffle();
+      for (let i = 0; i < total; i++) {
+        const card = createCard(i);
+        $wrapper.appendChild(card);
+      }
+    }
+    startGame();
   </script>
 </body>
 </html>
