--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       transition: transform 0.8s;
       transform-style: preserve-3d;
     }
-    .card .flipped .card-inner {
+    .card.flipped .card-inner {
       transform: rotateY(180deg);
     }
     .card-front {
@@ -33,7 +33,7 @@
       width: 100%;
       height: 100%;
       border: 1px solid black;
-      backface-visibility: hidden;
+      backface-visibility: hidden
     }
     .card-back {
       transform: rotateY(180deg);
@@ -79,8 +79,22 @@
         const card = createCard(i);
         $wrapper.appendChild(card);
       }
+
+      document.querySelectorAll('.card').forEach((card, index) => { // 초반 카드 공개
+        setTimeout(() => {
+          card.classList.add('flipped');
+        }, 1000 + 100 * index);
+      });
+
+      setTimeout(() => { //카드 감추기
+        document.querySelectorAll('.card').forEach((card) => {
+          card.classList.remove('flipped');
+        });
+      }, 5000);
     }
+  
     startGame();
+
   </script>
 </body>
 </html>
