--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     const colors = ['red', 'orange', 'yellow', 'green', 'white', 'pink'];
     let colorCopy = colors.concat(colors);
     let shuffled = [];
+    let clicked = [];
+    let completed = [];
 
     function shuffle() {
       for (let i = 0; colorCopy.length > 0; i++) {
@@ -73,10 +75,42 @@
       return card;
     }
 
+    function onClickCard() {
+      this.classList.toggle('flipped'); //this또는 event.target이때는 event 넣어줘야함
+      clicked.push(this);
+      if (clicked.length !== 2) { //2장이 아니면 함수 종료
+        return;
+      } //아래 부분은 카드 2개 일때만 실행됨
+
+      const firstBackColor = clicked[0].querySelector('.card-back').style.backgroundColor;
+      const secondBackColor = clicked[1].querySelector('.card-back').style.backgroundColor;
+      if (firstBackColor === secondBackColor) { //두 카드가 같은 카드면
+        completed.push(clicked[0]);
+        completed.push(clicked[1]);
+        clicked = [];
+        if (completed.length !== total) {
+          return;
+        }
+        setTimeout(() => {
+          alert('축하합니다!');
+          resetGame();
+        }, 1000);
+        return;
+      }
+      
+      //두 카드가 다르면
+      setTimeout(() => {
+        clicked[0].classList.remove('flipped');
+        clicked[1].classList.remove('flipped');
+        clicked = [];
+      }, 500);
+    }
+
     function startGame() {
       shuffle();
       for (let i = 0; i < total; i++) {
         const card = createCard(i);
+        card.addEventListener('click', onClickCard);
         $wrapper.appendChild(card);
       }
 
@@ -92,8 +126,16 @@
         });
       }, 5000);
     }
-  
     startGame();
+  
+    function resetGame() {
+      $wrapper.innerHTML = '';
+      colorCopy = colors.concat(colors);
+      shuffled = [];
+      completed = [];
+      startGame();
+    }
+
 
   </script>
 </body>
